# agentweb

./: .gitignore  CHANGELOG.md  LICENSE  README.md  agentweb-architecture.html  benchmark.py  install.sh  pyproject.toml  stress_test.py
.github/workflows/: ci.yml
agentweb/: __init__.py  api.py  auth_profile.py  authenticity.py  cli.py  config.py  core.py  deep_research.py  errors.py  ingest.py  mechanics.py  memory.py  orchestration.py  safety.py  sdk.py  stealth.py  storage.py
agentweb/engine/: __init__.py  fetch.py  rank.py  search.py
agentweb/engine/providers/: __init__.py  arxiv.py  duckduckgo.py  general.py  github.py  hackernews.py  jina.py  nominatim.py  reddit.py  stackexchange.py  twitter.py  wikipedia.py  youtube.py
docs/: agentweb.md  api.md  architecture.md  changelog.md  deployment.md  extensions.md  quickstart.md  requirements.md
hermes-plugin/: __init__.py  plugin.yaml  provider.py
hermes-plugin/patches/: 01-get-backend.patch  02-is-backend-available.patch
hermes-skill/: SKILL.md  install-hermes.sh
hermes-skill/references/: agentweb-v0.2.0-test-sweep-findings.md  agentweb-vs-others-comparison.md  llm-benchmark-research-session.md  multi-source-research-tips.md  vn-coffee-market-research-pattern.md
scripts/: validate-skill-sync.py
tests/: test_agentweb_cli.py  test_api.py  test_api_admin.py  test_deep_research.py  test_ingest.py  test_mechanics.py  test_memory.py  test_orchestration.py  test_safety.py  test_storage.py
